Projects section done

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ section {
     justify-content: center;
     /* border-bottom: 2px solid hsla(25, 76%, 31%,0.2); */
     overflow: hidden;
+    position: relative;
 }
 .section-header{
     display: flex;
@@ -29,4 +30,20 @@ section {
     height: 0.2rem;
     background-color: hsl(0, 0%, 86%);
     border-radius: 0.2rem;
+}
+
+.top {
+    width: 3rem;
+    height: 3rem;
+    position: absolute;
+    background-color: hsl(0, 0%, 9%);
+    border-radius: 2rem;
+    bottom: 12%;
+    right: 8%;
+    position: fixed;
+    border: 0.1rem solid hsla(152, 98%, 36%,0.2);
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
