--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -2,14 +2,14 @@
     padding: 1rem;
 }
 .about {
-    width: 85%;
-    height: 85%;
+    width: 88%;
+    height: 80%;
     display: flex;
-    gap: 2.8rem;
+    gap: 0.5rem;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    padding: 2rem;
+    padding: 1.4rem;
     overflow: hidden;
 }
 .about-left,
@@ -24,29 +24,56 @@
 }
 .about-left {
     flex: 2;
-    gap: 2rem;
+    gap: 1rem;
+    align-items: start;
 }
 .about-right {
     flex: 1;
 }
-.about-card {
-    background: linear-gradient(320deg, #0a0a0a 10%, #1a1a2e 90%, #16213e 100%);
+.about-card,
+.about-card-story {
+    width: 100%;
     border-radius: 0.6rem;
     padding: 1.6rem 2.2rem;
     overflow: hidden;
     height: max-content;
 }
+.about-card-story {
+    background: linear-gradient(320deg, #0a0a0a 10%, #1a1a2e 90%, #16213e 100%);
+}
+.about-card {
+    border: 0.125rem solid hsla(27, 63%, 92%, 0.1);
+    position: relative;
+}
 .about-card-title {
     margin-bottom: 0.4rem;
     font-size: 1.1rem;
 }
-.about-card-desc {
-    min-width: fit-content;
+.about-details {
     font-size: 0.9rem;
 }
+.about-details ul {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 1rem;
+}
+.about-skill {
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    border: 0.055rem solid hsla(27, 63%, 92%, 0.1);
+    padding: 0.8rem 1.2rem;
+    border-radius: 1rem;
+    font-size: 0.9rem;
+    transition: all 0.3s ease-in;
+}
+.about-skill:hover {
+    border: 0.055rem solid  hsla(152, 100%, 44%, 0.8);
+    background-color: hsla(152, 100%, 44%, 0.05);
+    transform: translateY(-2px);
+}
 .pic-container {
-    flex: 1;
-    width: 100%;
     height: 100%;
     margin: auto;
     display: flex;
@@ -56,11 +83,9 @@
 }
 
 .section-pic {
-    /* width: 100%; */
     height: 100%;
     border: 1px solid #16213e;
     border-radius: 0.8rem;
-    /* margin: auto; */
 }
 
 .about-underline {
@@ -68,5 +93,5 @@
     height: 0.2rem;
     border-radius: 0.2rem;
     background-color: wheat;
-    margin-bottom: 1rem;
+    margin-bottom: 1.2rem;
 }
