--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -5,17 +5,51 @@
 }
 
 .projects {
-    width: 85%;
-    height: 85%;
+    width: 88%;
+    height: 80%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .project-card {
-    width: 340px;
-    height: 80%;
+    width: 360px;
+    height: 480px;
     background: linear-gradient(320deg, #0a0a0a 0%, #1a1a2e 50%, #16213e 100%);
     border-radius: 0.6rem;
     margin: auto 0;
+}
+.project-img-container,
+.project-desc {
+    width: 100%;
+    height: 40%;
+}
+.project-img-container {
+    padding: 0.8rem 1rem;
+}
+.project-img {
+    width: 100%;
+    border-radius: 0.6rem;
+}
+.project-details {
+    padding: 0.4rem 1rem;
+    font-size: 0.9rem;
+}
+.project-desc{
+    margin-bottom: 0.8rem;
+}
+.project-techStack {
+    height: 20%;
+}
+.project-techStack ul {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.8rem;
+    margin-bottom: 0.8rem;
+}
+.project-techStack li {
+    padding: 0.2rem 0.8rem;
+    border: 0.025rem solid hsla(27, 63%, 92%, 0.1);
+    background-color: hsla(0, 0%, 48%, 0.1);
+    border-radius: 0.6rem;
 }
