Added project links to project cards

--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -2,6 +2,7 @@
     align-items: center;
     justify-content: space-around;
     padding: 1rem;
+    /* background: linear-gradient(320deg, #0a0a0a 0%, #16213e 50%, #16213e 100%); */
 }
 
 .projects {
@@ -15,9 +16,11 @@
 .project-card {
     width: 360px;
     height: 480px;
-    background: linear-gradient(320deg, #0a0a0a 0%, #1a1a2e 50%, #16213e 100%);
+    /* background: linear-gradient(320deg, #0a0a0a 0%, #1a1a2e 50%, #16213e 100%); */
+    /* background-color: hsla(0, 0%, 9%,0.8); */
     border-radius: 0.6rem;
     margin: auto 0;
+    border: 0.125rem solid hsla(27, 63%, 92%, 0.1);
 }
 .project-img-container,
 .project-desc {
@@ -40,6 +43,7 @@
 }
 .project-techStack {
     height: 20%;
+    margin-bottom: 1.5rem;
 }
 .project-techStack ul {
     display: flex;
@@ -52,4 +56,10 @@
     border: 0.025rem solid hsla(27, 63%, 92%, 0.1);
     background-color: hsla(0, 0%, 48%, 0.1);
     border-radius: 0.6rem;
+}
+.project-links ul {
+    display: flex;
+    align-items: start;
+    justify-content: flex-start;
+    gap: 1.4rem;
 }
