--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -3,7 +3,7 @@
 }
 .about {
     width: 88%;
-    height: 80%;
+    /* height: 100%; */
     display: flex;
     gap: 0.5rem;
     flex-direction: row;
@@ -17,18 +17,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: start;
     height: 100%;
     margin: auto 0;
     padding: 0.8rem;
 }
 .about-left {
     flex: 2;
-    gap: 1rem;
+    gap: 2rem;
     align-items: start;
 }
 .about-right {
     flex: 1;
+    flex-grow: 1;
 }
 .about-card,
 .about-card-story {
@@ -57,6 +58,10 @@
     align-items: center;
     justify-content: start;
     gap: 1rem;
+    margin-bottom: 0.4rem;
+}
+.about-details p {
+    margin-bottom: 0.6rem;
 }
 .about-skill {
     display: flex;
@@ -67,6 +72,7 @@
     border-radius: 1rem;
     font-size: 0.9rem;
     transition: all 0.3s ease-in;
+    font-size: 0.9rem;
 }
 .about-skill:hover {
     border: 0.055rem solid  hsla(152, 100%, 44%, 0.8);
