--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -40,7 +40,9 @@
     height: max-content;
 }
 .about-card-story {
-    background: linear-gradient(320deg, #0a0a0a 10%, #1a1a2e 90%, #16213e 100%);
+    /* background: linear-gradient(320deg, #0a0a0a 10%, #1a1a2e 90%, #16213e 100%); */
+    background: linear-gradient(320deg, #0a0a0a 0%, #16213e 100%);
+
 }
 .about-card {
     border: 0.125rem solid hsla(27, 63%, 92%, 0.1);
