All sections' content added

--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,13 @@
   --img-border: 1px solid #16213e;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 html {
-    margin: 0;
-    box-sizing: border-box;
     scroll-behavior: smooth;
 }
 
