--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,9 +1,12 @@
 nav {
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 1.4rem 1.2rem;
-    min-height: fit-content;
+    background-color: var(--bg-main);
+    position: fixed;
+    z-index: 100;
 
     @media (width>=775px) {
         width: 85%;
@@ -23,16 +26,17 @@ nav {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: 2rem;
+    font-size: 1.8rem;
     transition: 0.3s ease;
     text-align: center;
+    z-index: 100;
 }
 
 .mobile-menu ul {
     /* background-color: aliceblue; */
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1.2rem;
 }
 
 .mobile-menu ul li {
@@ -48,8 +52,8 @@ nav {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 50px;
-    width: 50px;
+    height: 45px;
+    width: 45px;
     margin-left: auto;
     position: relative;
     padding: 0.3rem;
