--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -4,7 +4,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem 1.2rem;
+    padding: 1.4rem 1.2rem;
     background-color: var(--bg-main);
     position: relative;
     position: fixed;
@@ -13,10 +13,14 @@ nav {
 
 .nav-container {
     display: flex;
-    min-width: 85%;
+    min-width: 95%;
     margin: 0 auto;
     align-items: center;
     justify-content: space-between;
+
+    @media (width>=775px) {
+        min-width: 80%;
+    }
 } 
 
 .mobile-menu {
