--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -34,11 +34,12 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     font-size: 1.8rem;
     transition: 0.3s ease;
     text-align: center;
     z-index: 100;
+    padding-top: 8rem;
 }
 
 .mobile-menu ul {
@@ -73,7 +74,7 @@ nav {
 }
 .ham-menu span {
     height: 4px;
-    width: 100%;
+    width: 80%;
     border-radius: 25px;
     background-color: var(--text-main);
     transition: 0.3s ease;
@@ -87,7 +88,6 @@ nav {
 }
 
 .ham-menu.active span:nth-child(2) {
-    /* opacity: 0; */
     display: none;
 }
 
@@ -147,8 +147,9 @@ li:hover {
 
 .logo {
     color: var(--sandy-brown);
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 600;
+    z-index: 1000;
     @media (width>=775px) {
         font-size: 1.8rem;
     }
