--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -1,7 +1,114 @@
 .hero-section {
-    padding-top: 90px;
+    min-height: 100vh;
+    padding-top: 4rem;
+}
+
+.hero-section,
+.hero-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* border: 1px solid white; */
+}
+
+.hero-container {
+    gap: 1.5rem;
+
+    @media (width>=440px) {
+        width: 90%;
+    }
+
+    @media (width>=900px) {
+        width: 78%;
+        flex-direction: row;
+    }
 }
 
 .profile-img {
-    width: 32vw;
+    width: 35vw;
+    border-radius: 0.6rem;
+    filter: saturate(0);
+    transition: filter .3s ease-in-out;
+    
+    @media (width>=900px) {
+        width: 38vw;
+        max-width: 340px;
+    }
+}
+
+.profile-img:hover {
+    filter: saturate(1);
+}
+
+.profile {
+    width: 85%;
+
+    @media (width>=775px) {
+        width: 60%;
+    }
+}
+
+.profile-title {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+}
+
+.profile-subtitle {
+    font-size: 1.2rem;
+    color: var(--chocolate);
+    margin-bottom: 0.6rem;
+}
+
+.profile-message {
+    font-size: 0.85rem;
+    margin-bottom: 0.75rem;
+}
+
+.profile-socials {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 0.95rem;
+    /* gap: 0.8rem; */
+    margin-bottom: 0.4rem;
+}
+
+.social-link {
+    font-weight: 600;
+    color: var(--text-subheading);
+    margin-bottom: 0.9rem;
+    margin-right: 0.9rem;
+}
+
+.profile-buttons {
+    display: flex;
+    gap: 1.8rem;
+}
+
+.cv-button,
+.projects-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.8rem;
+    border-radius: 0.6rem;
+    font-size: 0.9rem;
+    transition: all 0.3s ease-in-out;
+}
+.cv-button {
+    background-color: var(--emerald-green);
+    color: var(--bg-main);
+}
+
+.projects-button {
+    border: var(--card-border);
+}
+
+.cv-button:hover {
+    box-shadow: 4px 2px var(--chocolate);
+}
+
+.projects-button:hover {
+    color: var(--chocolate);
+    border: var(--card-border-hover);
 }
