--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -14,6 +14,8 @@
 
 .hero-container {
     gap: 1.5rem;
+    height: 350px;
+    padding: 1rem;
 
     @media (width>=440px) {
         width: 90%;
@@ -30,14 +32,16 @@
 }
 
 .profile-img {
-    width: 75vw;
-    max-width: 350px;
+    width: 70vw;
+    max-width: 310px;
     border-radius: 0.6rem;
     filter: saturate(0);
     transition: filter .3s ease-in-out;
     
-    @media (width>=900px) {
+    @media (width>=940px) {
         width: 38vw;
+        max-width: 350px;
+
     }
 }
 
@@ -46,32 +50,70 @@
 }
 
 .profile {
-    width: 75vw;
-    @media (width>=775px) {
-        width: 60%;
+    width: 74vw;
+    max-width: 400px;
+    min-height: 100%;
+    padding: 1rem;
+    
+    @media (width>=580px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
     }
+
+    @media (width>=940px) {
+        max-width: 550px;
+    }
+
 }
 
 .profile-title {
     font-size: 1.8rem;
     margin-bottom: 1.2rem;
+
+    @media (width>=940px) {
+        font-size: 2.2rem;
+    }
+
+    @media (width>=1200px) {
+        font-size: 3rem;
+    }
 }
 
 .profile-subtitle {
     font-size: 1rem;
     color: var(--chocolate);
     margin-bottom: 0.3rem;
+    
+    @media (width>=940px) {
+        min-height: 100%;
+        font-size: 1.1rem;
+    }
 }
 
 .profile-message {
-    font-size: 0.85rem;
+    font-size: 0.8rem;
     margin-bottom: 0.75rem;
+    text-align: left;
+    text-align: justify;
+
+
+    @media (width>=580px) {
+        text-align: center;
+
+    }
+
+    @media (width>=940px) {
+        min-height: 100%;
+        font-size: 0.9rem;
+    }
 }
 
 .profile-socials {
     display: flex;
     flex-wrap: wrap;
-    font-size: 0.95rem;
+    font-size: 0.9rem;
     /* gap: 0.8rem; */
     margin-bottom: 0.4rem;
 }
