--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -14,15 +14,14 @@
 
 .hero-container {
     gap: 1.5rem;
-    height: 350px;
+    min-height: 350px;
     padding: 1rem;
 
     @media (width>=440px) {
         width: 90%;
     }
-
+    
     @media (width>=900px) {
-        width: 78%;
         flex-direction: row;
     }
 }
@@ -50,7 +49,7 @@
 }
 
 .profile {
-    width: 74vw;
+    width: 90vw;
     max-width: 400px;
     min-height: 100%;
     padding: 1rem;
@@ -93,9 +92,9 @@
 }
 
 .profile-message {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     margin-bottom: 0.75rem;
-    text-align: left;
+    /* text-align: left; */
     text-align: justify;
 
 
@@ -137,7 +136,7 @@
     justify-content: center;
     padding: 0.8rem;
     border-radius: 0.6rem;
-    font-size: 0.9rem;
+    font-size: 0.7rem;
     transition: all 0.3s ease-in-out;
 }
 .cv-button {
