--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -49,10 +49,13 @@
 }
 
 .profile {
-    width: 90vw;
     max-width: 400px;
     min-height: 100%;
     padding: 1rem;
+
+    @media (width>=580px) {
+        width: 90vw;
+    }
     
     @media (width>=580px) {
         display: flex;
@@ -134,9 +137,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0.8rem;
+    padding: 0.7rem 0.9rem;
     border-radius: 0.6rem;
-    font-size: 0.7rem;
+    font-size: 0.88rem;
     transition: all 0.3s ease-in-out;
 }
 .cv-button {
