--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -1,6 +1,7 @@
 .hero-section {
     min-height: 100vh;
     padding-top: 4rem;
+    background: var(--bg-gradient);
 }
 
 .hero-section,
@@ -58,6 +59,12 @@
     align-items: center;
     justify-content: space-between;
 
+    @media (width>=900px) {
+        align-items: start;
+        text-align: left;
+    }
+
+
     @media (width>=940px) {
         max-width: 550px;
     }
@@ -66,13 +73,13 @@
 
 .profile-title {
     font-size: 1.4rem;
-    margin-bottom: 1.2rem;
+    margin-bottom: 1.8rem;
 
     @media (width>=340px) {
         font-size: 1.8rem;
     }
 
-    @media (width>=940px) {
+    @media (width>=900px) {
         font-size: 2.2rem;
     }
 
@@ -90,7 +97,7 @@
         font-size: 1rem;
     }
     
-    @media (width>=940px) {
+    @media (width>=900px) {
         font-size: 1rem;
     }
 
@@ -101,26 +108,38 @@
 
 .profile-message {
     font-size: 0.8rem;
-    margin-bottom: 1.4rem;
-    text-align: left;
     text-align: center;
+    min-height: 100%;
+    margin-bottom: 1rem;
 
     @media (width>=375px) {
         min-height: 100%;
         font-size: 0.9rem;
     }
 
-    @media (width>=940px) {
-        min-height: 100%;
+    @media (width>=900px) {
         font-size: 0.9rem;
+        text-align: left;
+
+    }
+
+    @media (width>=1200px) {
+        font-size: 1rem;
+
     }
 }
 
 .profile-socials {
     display: flex;
     flex-wrap: wrap;
-    font-size: 0.9rem;
-    margin-bottom: 1rem;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.8rem;
+    margin-bottom: 0.7rem;
+
+    @media (width>=340px) {
+        font-size: 0.9rem;
+    }
 }
 
 .social-link {
