--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -62,8 +62,8 @@ nav {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 45px;
-    width: 45px;
+    height: 30px;
+    width: 30px;
     margin-left: auto;
     position: relative;
     z-index: 1000;
@@ -84,6 +84,7 @@ nav {
 
 /* When active */
 .ham-menu.active span:nth-child(1) {
+    top: 50%;
     transform: rotate(45deg) translate(-1px, -1px);
 }
 
@@ -92,6 +93,7 @@ nav {
 }
 
 .ham-menu.active span:nth-child(3) {
+    top: 50%;
     transform: rotate(-45deg) translate(10px, -10px);
 }
 
