--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -121,7 +121,11 @@ nav {
 
 .nav-links {
     color: var(--text-main);
-    font-size: 0.9rem;
+    font-size: 1rem;
+
+    @media (width>=775px) {
+        font-size: 0.9rem;
+    }
 }
 
 a,
@@ -154,9 +158,10 @@ li:hover {
 
 .logo {
     color: var(--sandy-brown);
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: 600;
     z-index: 1000;
+
     @media (width>=775px) {
         font-size: 1.6rem;
     }
