--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -107,7 +107,7 @@
 
 .profile-message {
     font-size: 0.9rem;
-    text-align: center;
+    text-align: justify;
     min-height: 100%;
     margin-bottom: 1rem;
 
