--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,21 @@ section {
 }
 
 .section-subtitle {
-  margin-bottom: 0.6rem;
+  font-size: 0.9rem;
+  color: var(--chocolate);
+  margin-bottom: 0.3rem;
+
+  @media (width>=340px) {
+      font-size: 1rem;
+  }
+  
+  @media (width>=900px) {
+      font-size: 1.1rem;
+  }
+
+  @media (width>=1200px) {
+      font-size: 1.2rem;
+  }
 }
 
 .underline {
