--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -72,6 +72,7 @@
 
 .profile-title {
     font-size: 1.4rem;
+    font-weight: 800;
     margin-bottom: 1.8rem;
 
     @media (width>=340px) {
@@ -148,6 +149,11 @@
 .profile-buttons {
     display: flex;
     gap: 1.8rem;
+    font-size: 0.88rem;
+
+    @media (width>=1200px) {
+        font-size: 0.92rem;
+    }
 }
 
 .cv-button,
@@ -157,7 +163,6 @@
     justify-content: center;
     padding: 0.7rem 0.9rem;
     border-radius: 0.6rem;
-    font-size: 0.88rem;
     transition: all 0.3s ease-in-out;
 }
 .cv-button {
