--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -6,7 +6,12 @@
     justify-content: center;
 }
 
+.projects-section {
+    min-height: 100vh;
+}
+
 .projects-container {
+    height: 100%;
     width: 90vw;
     gap: 1.6rem;
     flex-wrap: wrap;
@@ -25,7 +30,7 @@
     border-radius: 0.6rem;
     background: var(--bg-third);
     padding: 1.2rem;
-    gap: 1rem;
+    gap: 1.3rem;
 
     @media (width>=450px) {
         padding: 1.4rem;
@@ -44,12 +49,12 @@
 .project-info {
     display: flex;
     flex-direction: column;
-    gap: 0.8rem;
 }
 
 .project-desc {
     color: var(--text-secondary);
     font-size: 0.9rem;
+    margin-bottom: 0.9rem;
 }
 
 .project-techstack {
@@ -61,7 +66,7 @@
 
 .project-tech {
     border: var(--tag-border);
-    padding: 0.6rem 0.9rem;
+    padding: 0.4rem 0.8rem;
     border-radius: 0.6rem;
     font-size: 0.77rem;
     background-color: var(--bg-secondary);
