--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,13 @@
   --chocolate: hsla(34, 78%, 70%);
   --sandy-brown: hsl(28, 87%, 67%);
 
-  --emerald-green: #00C896;
+  --emerald-green: hsl(165, 100%, 39%);
 
   --card-border: 0.125rem solid hsla(27, 63%, 92%, 0.1); 
   --card-border-hover: 0.125rem solid hsla(34, 78%, 70%); 
+  
   --tag-border: 0.055rem solid hsla(27,63%,92%,.1);
+  --tag-hover: hsla(165, 100%, 44%, 0.05);
   --img-border: 1px solid #16213e;
 }
 
