--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -147,7 +147,7 @@
 
 .profile-buttons {
     display: flex;
-    gap: 1.8rem;
+    /* gap: 1.8rem; */
     font-size: 0.88rem;
 
     @media (width>=1200px) {
@@ -162,7 +162,7 @@
     justify-content: center;
     padding: 0.7rem 0.9rem;
     border-radius: 0.6rem;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease;
 }
 .cv-button {
     background-color: var(--emerald-green);
@@ -170,11 +170,14 @@
 }
 
 .projects-button {
+    margin-left: 2rem;
     border: var(--card-border);
 }
 
 .cv-button:hover {
-    box-shadow: 4px 2px var(--chocolate);
+    border: var(--card-border-hover);
+    background: none;
+    color: var(--text-main);
 }
 
 .projects-button:hover {
